--- a/index.html
+++ b/index.html
@@ -134,6 +134,57 @@
         class="flex gap-5 flex-wrap justify-center"
       ></div>
     </section>
+    <!--Word Container-->
+    <section
+      id="wordContainer"
+      class="bg-gray-100 p-10 w-11/12 mx-auto my-10 grid grid-cols-3 gap-5"
+    >
+      <div
+        class="font-bangla text-center bg-sky-100 col-span-full rounded-xl py-10 space-y-6"
+      >
+        <p class="text-xl font-medium text-gray-400">
+          আপনি এখনো কোন Lesson Select করেন নি
+        </p>
+        <h2 class="font-bold text-4xl">একটি Lesson Select করুন।</h2>
+      </div>
+    </section>
+
+    <!-- Open the modal using ID.showModal() method -->
+    <!--     <button class="btn" onclick="my_modal_5.showModal()">open modal</button>  -->
+    <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box">
+        <div id="detailsContainer" class="space-y-5">
+          <div class="">
+            <h2 class="text-2xl font-bold">
+              Eager(<i class="fa-solid fa-microphone"></i>: ইগার)
+            </h2>
+          </div>
+          <div class="">
+            <h2 class="font-bold">Meaning</h2>
+            <p>আগ্রহী</p>
+          </div>
+
+          <div class="">
+            <h2 class="font-bold">Example</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+
+          <div class="">
+            <h2 class="font-bold">Synonyms</h2>
+            <span class="btn">Syn 1</span>
+            <span class="btn">Syn 2</span>
+            <span class="btn">Syn 3</span>
+          </div>
+        </div>
+        <div class="modal-action">
+          <form method="dialog">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+          </form>
+        </div>
+      </div>
+    </dialog>
+
     <script src="./script/script.js"></script>
   </body>
 </html>
