--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
         class="flex gap-5 flex-wrap justify-center"
       ></div>
     </section>
+    <!--search option-->
+    <section class="flex justify-center my-10">
+      <div class="join">
+        <div>
+          <label for="" class="input validator join-item">
+            <input
+              id="inputSearch"
+              type="text"
+              placeholder="Search Vocabulary"
+              required
+            />
+          </label>
+        </div>
+        <button id="btnSearch" class="btn btn-primary join-item">Search</button>
+      </div>
+    </section>
+    <!--loading bars-->
+    <section id="spinner" class="flex justify-center items-center py-10 hidden">
+      <span class="loading loading-bars loading-xl"></span>
+    </section>
     <!--Word Container-->
     <section
       id="wordContainer"
@@ -153,29 +173,7 @@
     <!--     <button class="btn" onclick="my_modal_5.showModal()">open modal</button>  -->
     <dialog id="word_modal" class="modal modal-bottom sm:modal-middle">
       <div class="modal-box">
-        <div id="detailsContainer" class="space-y-5">
-          <div class="">
-            <h2 class="text-2xl font-bold">
-              Eager(<i class="fa-solid fa-microphone"></i>: ইগার)
-            </h2>
-          </div>
-          <div class="">
-            <h2 class="font-bold">Meaning</h2>
-            <p>আগ্রহী</p>
-          </div>
-
-          <div class="">
-            <h2 class="font-bold">Example</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-
-          <div class="">
-            <h2 class="font-bold">Synonyms</h2>
-            <span class="btn">Syn 1</span>
-            <span class="btn">Syn 2</span>
-            <span class="btn">Syn 3</span>
-          </div>
-        </div>
+        <div id="detailsContainer" class="space-y-5"></div>
         <div class="modal-action">
           <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
